Drop Python 3.6 support.

--- a/demos/OneWayHashChainsExplained.ipynb
+++ b/demos/OneWayHashChainsExplained.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "[Hash chains](https://en.wikipedia.org/wiki/Hash_chain) are well-known as a simple and efficient solution for asymmetric identification and authentication. They appear in many guises, often in contexts with severe performance constraints. For example, the [TESLA](https://www.rfc-editor.org/info/rfc4082) scheme and friends use hash chains at their core and provide authentication in wireless sensor networks and satellite communication.\n",
     "\n",
-    "In this notebook we construct an MPyC program for handling hash chains in a multiparty setting. There will be no single point of failure, as no single party will ever know the secret information from which the hash chains are built. This way of protecting secret keys is similar to what companies like [Sepior](https://sepior.com/) and [Unbound Tech](https://www.unboundtech.com/) do using threshold cryptography and MPC-based hardware security modules (HSMs).\n",
+    "In this notebook we construct an MPyC program for handling hash chains in a multiparty setting. There will be no single point of failure, as no single party will ever know the secret information from which the hash chains are built. This way of protecting secret keys is similar to what companies like [Sepior](https://sepior.com/) and [Unbound](https://www.unboundsecurity.com/) do using threshold cryptography and MPC-based hardware security modules (HSMs).\n",
     "\n",
     "## Hash Chains\n",
     "\n",
@@ -184,21 +184,21 @@
      "output_type": "stream",
      "text": [
       "Order-0 hash chain of length 1 (1 rounds):\n",
-      " 1 x0 = 3a6a7a63718f617d083a39ef4ad38273\n",
+      " 1 x0 = dce02350924adb59103b4000066ba9b2\n",
       "\n",
       "Order-1 hash chain of length 2 (3 rounds):\n",
       " 1 -\n",
-      " 2 x1 = e83fd414e92ffb695cbe804df88e1d9d\n",
-      " 3 x0 = 3a6a7a63718f617d083a39ef4ad38273\n",
+      " 2 x1 = 1f25ad5f0aec7b7da294b0eaf8a197ad\n",
+      " 3 x0 = dce02350924adb59103b4000066ba9b2\n",
       "\n",
       "Order-2 hash chain of length 4 (7 rounds):\n",
       " 1 -\n",
       " 2 -\n",
       " 3 -\n",
-      " 4 x3 = a2453190559548e614ab319045bf1133\n",
-      " 5 x2 = d2d17b6a5bbe5ed2cc90b54e025e71c2\n",
-      " 6 x1 = e83fd414e92ffb695cbe804df88e1d9d\n",
-      " 7 x0 = 3a6a7a63718f617d083a39ef4ad38273\n",
+      " 4 x3 = 86310b3f27481602941f8092771b6b45\n",
+      " 5 x2 = 0f3d5981719b4410636824cb98433953\n",
+      " 6 x1 = 1f25ad5f0aec7b7da294b0eaf8a197ad\n",
+      " 7 x0 = dce02350924adb59103b4000066ba9b2\n",
       "\n",
       "Order-3 hash chain of length 8 (15 rounds):\n",
       " 1 -\n",
@@ -208,14 +208,14 @@
       " 5 -\n",
       " 6 -\n",
       " 7 -\n",
-      " 8 x7 = 95014f4f5a403323c0ecbac44dc04ccc\n",
-      " 9 x6 = 276e30b2d546fc73aa5fcfea2c199741\n",
-      "10 x5 = 4b3348b7dbab9d4f3035bd7e9764eb42\n",
-      "11 x4 = ff97778cbe2a872b1b1f3c55f94219b9\n",
-      "12 x3 = a2453190559548e614ab319045bf1133\n",
-      "13 x2 = d2d17b6a5bbe5ed2cc90b54e025e71c2\n",
-      "14 x1 = e83fd414e92ffb695cbe804df88e1d9d\n",
-      "15 x0 = 3a6a7a63718f617d083a39ef4ad38273\n",
+      " 8 x7 = d06f7022bce379c300c5522b5859be10\n",
+      " 9 x6 = 6bd7f5507fe750c620e562b5740d1618\n",
+      "10 x5 = 21f54ab687cd1e4d8fbfa1b25401887a\n",
+      "11 x4 = 7cc31a0733a1c1f9dc4723d56976dc37\n",
+      "12 x3 = 86310b3f27481602941f8092771b6b45\n",
+      "13 x2 = 0f3d5981719b4410636824cb98433953\n",
+      "14 x1 = 1f25ad5f0aec7b7da294b0eaf8a197ad\n",
+      "15 x0 = dce02350924adb59103b4000066ba9b2\n",
       "\n"
      ]
     }
@@ -244,7 +244,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -258,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
