--- a/demos/SecureSortingNetsExplained.ipynb
+++ b/demos/SecureSortingNetsExplained.ipynb
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-10-23 09:40:25,563 Start MPyC runtime v0.4.2\n"
+      "2022-03-03 11:49:20,287 Start MPyC runtime v0.8.2\n"
      ]
     }
    ],
@@ -140,11 +140,11 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-4-a875f9c118a5>\", line 3, in <module>\n",
+      "  File \"C:\\Users\\Berry\\AppData\\Local\\Temp\\ipykernel_7188\\3699103182.py\", line 3, in <cell line: 2>\n",
       "    for i in oddeven_merge_sort(len(x)): compare_and_swap(x, *i)\n",
-      "  File \"<ipython-input-2-a99b48746a99>\", line 30, in compare_and_swap\n",
+      "  File \"C:\\Users\\Berry\\AppData\\Local\\Temp\\ipykernel_7188\\2407566342.py\", line 30, in compare_and_swap\n",
       "    if x[a] > x[b]:\n",
-      "  File \"c:\\users\\berry\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\mpyc-0.4.2-py3.6.egg\\mpyc\\sectypes.py\", line 36, in __bool__\n",
+      "  File \"C:\\Users\\Berry\\Documents\\GitHub\\mympyc\\mpyc\\sectypes.py\", line 63, in __bool__\n",
       "    raise TypeError('cannot use secure type in Boolean expressions')\n",
       "TypeError: cannot use secure type in Boolean expressions\n"
      ]
@@ -290,19 +290,19 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-9-4b604066647c>\", line 3, in <module>\n",
+      "  File \"C:\\Users\\Berry\\AppData\\Local\\Temp\\ipykernel_7188\\4181753287.py\", line 3, in <cell line: 2>\n",
       "    bitonic_sort(True, x)\n",
-      "  File \"<ipython-input-7-8a5c3e13ac49>\", line 5, in bitonic_sort\n",
+      "  File \"C:\\Users\\Berry\\AppData\\Local\\Temp\\ipykernel_7188\\225220890.py\", line 5, in bitonic_sort\n",
       "    first = bitonic_sort(True, x[:len(x) // 2])\n",
-      "  File \"<ipython-input-7-8a5c3e13ac49>\", line 5, in bitonic_sort\n",
+      "  File \"C:\\Users\\Berry\\AppData\\Local\\Temp\\ipykernel_7188\\225220890.py\", line 5, in bitonic_sort\n",
       "    first = bitonic_sort(True, x[:len(x) // 2])\n",
-      "  File \"<ipython-input-7-8a5c3e13ac49>\", line 7, in bitonic_sort\n",
+      "  File \"C:\\Users\\Berry\\AppData\\Local\\Temp\\ipykernel_7188\\225220890.py\", line 7, in bitonic_sort\n",
       "    return bitonic_merge(up, first + second)\n",
-      "  File \"<ipython-input-7-8a5c3e13ac49>\", line 14, in bitonic_merge\n",
+      "  File \"C:\\Users\\Berry\\AppData\\Local\\Temp\\ipykernel_7188\\225220890.py\", line 14, in bitonic_merge\n",
       "    bitonic_compare(up, x)\n",
-      "  File \"<ipython-input-7-8a5c3e13ac49>\", line 22, in bitonic_compare\n",
+      "  File \"C:\\Users\\Berry\\AppData\\Local\\Temp\\ipykernel_7188\\225220890.py\", line 22, in bitonic_compare\n",
       "    if (x[i] > x[i + dist]) == up:\n",
-      "  File \"c:\\users\\berry\\appdata\\local\\programs\\python\\python36\\lib\\site-packages\\mpyc-0.4.2-py3.6.egg\\mpyc\\sectypes.py\", line 36, in __bool__\n",
+      "  File \"C:\\Users\\Berry\\Documents\\GitHub\\mympyc\\mpyc\\sectypes.py\", line 63, in __bool__\n",
       "    raise TypeError('cannot use secure type in Boolean expressions')\n",
       "TypeError: cannot use secure type in Boolean expressions\n"
      ]
@@ -371,7 +371,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-10-23 09:40:26,468 Stop MPyC runtime -- elapsed time: 0:00:00.900694\n"
+      "2022-03-03 11:49:20,483 Stop MPyC runtime -- elapsed time: 0:00:00.194414\n"
      ]
     }
    ],
@@ -389,7 +389,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -403,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
