--- a/demos/SecretSantaExplained.ipynb
+++ b/demos/SecretSantaExplained.ipynb
@@ -75,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-11 15:06:47,266 Start MPyC runtime v0.7.6\n"
+      "2022-03-03 11:53:22,523 Start MPyC runtime v0.8.2\n"
      ]
     }
    ],
@@ -318,12 +318,12 @@
      "text": [
       "Random unit vectors:\n",
       " 1 [1]\n",
-      " 2 [1, 0]\n",
-      " 3 [0, 1, 0]\n",
-      " 4 [1, 0, 0, 0]\n",
-      " 5 [0, 1, 0, 0, 0]\n",
-      " 6 [1, 0, 0, 0, 0, 0]\n",
-      " 7 [0, 1, 0, 0, 0, 0, 0]\n"
+      " 2 [0, 1]\n",
+      " 3 [0, 0, 1]\n",
+      " 4 [0, 1, 0, 0]\n",
+      " 5 [0, 0, 0, 0, 1]\n",
+      " 6 [0, 1, 0, 0, 0, 0]\n",
+      " 7 [0, 0, 0, 0, 0, 0, 1]\n"
      ]
     }
    ],
@@ -347,12 +347,12 @@
      "text": [
       "Random permutations:\n",
       " 1 [0]\n",
-      " 2 [1, 0]\n",
-      " 3 [2, 0, 1]\n",
-      " 4 [2, 1, 3, 0]\n",
-      " 5 [1, 3, 4, 0, 2]\n",
-      " 6 [1, 0, 4, 2, 5, 3]\n",
-      " 7 [0, 1, 5, 6, 2, 3, 4]\n"
+      " 2 [0, 1]\n",
+      " 3 [0, 2, 1]\n",
+      " 4 [3, 2, 0, 1]\n",
+      " 5 [2, 4, 1, 3, 0]\n",
+      " 6 [3, 0, 4, 2, 1, 5]\n",
+      " 7 [0, 5, 1, 6, 2, 3, 4]\n"
      ]
     }
    ],
@@ -376,11 +376,11 @@
      "text": [
       "Random derangements:\n",
       " 2 [1, 0]\n",
-      " 3 [2, 0, 1]\n",
-      " 4 [1, 0, 3, 2]\n",
-      " 5 [1, 2, 0, 4, 3]\n",
-      " 6 [1, 4, 5, 2, 0, 3]\n",
-      " 7 [1, 3, 0, 4, 2, 6, 5]\n"
+      " 3 [1, 2, 0]\n",
+      " 4 [2, 3, 1, 0]\n",
+      " 5 [3, 2, 1, 4, 0]\n",
+      " 6 [3, 2, 5, 0, 1, 4]\n",
+      " 7 [6, 2, 3, 4, 1, 0, 5]\n"
      ]
     }
    ],
@@ -402,7 +402,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-11 15:07:02,233 Stop MPyC runtime -- elapsed time: 0:00:14.965030\n"
+      "2022-03-03 11:53:22,708 Stop MPyC runtime -- elapsed time: 0:00:00.183619\n"
      ]
     }
    ],
@@ -428,7 +428,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\berry\\appdata\\local\\programs\\python\\python38\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3449: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "C:\\Users\\Berry\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3348: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
       "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
@@ -462,32 +462,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-11 15:07:31,085 Start MPyC runtime v0.7.6\n",
+      "2022-03-03 11:54:26,845 Start MPyC runtime v0.8.2\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
       " 2 [1, 0]\n",
       " 3 [0, 0, 1]\n",
-      " 4 [0, 0, 0, 1]\n",
-      " 5 [0, 0, 1, 0, 0]\n",
-      " 6 [1, 0, 0, 0, 0, 0]\n",
-      " 7 [0, 0, 0, 0, 1, 0, 0]\n",
+      " 4 [0, 0, 1, 0]\n",
+      " 5 [0, 0, 0, 0, 1]\n",
+      " 6 [0, 1, 0, 0, 0, 0]\n",
+      " 7 [0, 0, 0, 0, 0, 0, 1]\n",
       "Random permutations:\n",
       " 1 [0]\n",
       " 2 [0, 1]\n",
-      " 3 [1, 2, 0]\n",
-      " 4 [1, 3, 0, 2]\n",
-      " 5 [1, 4, 2, 0, 3]\n",
-      " 6 [1, 4, 3, 5, 2, 0]\n",
-      " 7 [6, 2, 3, 4, 5, 1, 0]\n",
+      " 3 [0, 2, 1]\n",
+      " 4 [1, 0, 3, 2]\n",
+      " 5 [3, 2, 0, 4, 1]\n",
+      " 6 [2, 1, 0, 4, 5, 3]\n",
+      " 7 [5, 2, 4, 1, 0, 6, 3]\n",
       "Random derangements:\n",
       " 2 [1, 0]\n",
       " 3 [2, 0, 1]\n",
-      " 4 [3, 2, 0, 1]\n",
-      " 5 [2, 4, 0, 1, 3]\n",
-      " 6 [3, 4, 5, 0, 2, 1]\n",
-      " 7 [5, 0, 3, 2, 6, 1, 4]\n",
-      "2021-06-11 15:07:31,116 Stop MPyC runtime -- elapsed time: 0:00:00.031247\n"
+      " 4 [1, 3, 0, 2]\n",
+      " 5 [3, 2, 4, 1, 0]\n",
+      " 6 [2, 0, 5, 4, 3, 1]\n",
+      " 7 [3, 0, 6, 4, 5, 1, 2]\n",
+      "2022-03-03 11:54:26,908 Stop MPyC runtime -- elapsed time: 0:00:00.062494\n"
      ]
     }
    ],
@@ -514,7 +514,7 @@
       "usage: SecretSantaExplained.py [-H] [-h] [-C ini] [-P addr] [-M m] [-I i]\n",
       "                               [-T t] [-B b] [--ssl] [-L l] [-K k] [--no-log]\n",
       "                               [--no-async] [--no-barrier] [--no-gmpy2]\n",
-      "                               [--mix32-64bit] [--output-windows]\n",
+      "                               [--no-prss] [--mix32-64bit] [--output-windows]\n",
       "                               [--output-file] [-f F]\n",
       "\n",
       "optional arguments:\n",
@@ -537,6 +537,7 @@
       "  --no-async            disable asynchronous evaluation\n",
       "  --no-barrier          disable barriers\n",
       "  --no-gmpy2            disable use of gmpy2 package\n",
+      "  --no-prss             disable use of PRSS (pseudorandom secret sharing)\n",
       "  --mix32-64bit         enable mix of 32-bit and 64-bit platforms\n",
       "\n",
       "MPyC misc:\n",
@@ -568,33 +569,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-11 15:07:35,684 Start MPyC runtime v0.7.6\n",
-      "2021-06-11 15:07:36,285 All 3 parties connected via SSL.\n",
+      "2022-03-03 11:54:32,613 Start MPyC runtime v0.8.2\n",
+      "2022-03-03 11:54:33,255 All 3 parties connected via SSL.\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
-      " 2 [1, 0]\n",
+      " 2 [0, 1]\n",
       " 3 [0, 1, 0]\n",
-      " 4 [1, 0, 0, 0]\n",
-      " 5 [0, 0, 0, 0, 1]\n",
-      " 6 [0, 0, 0, 0, 0, 1]\n",
+      " 4 [0, 0, 1, 0]\n",
+      " 5 [1, 0, 0, 0, 0]\n",
+      " 6 [1, 0, 0, 0, 0, 0]\n",
       " 7 [0, 0, 0, 1, 0, 0, 0]\n",
       "Random permutations:\n",
       " 1 [0]\n",
-      " 2 [1, 0]\n",
-      " 3 [0, 2, 1]\n",
-      " 4 [1, 3, 2, 0]\n",
-      " 5 [1, 2, 3, 4, 0]\n",
-      " 6 [0, 1, 4, 5, 2, 3]\n",
-      " 7 [1, 0, 5, 2, 3, 6, 4]\n",
+      " 2 [0, 1]\n",
+      " 3 [2, 0, 1]\n",
+      " 4 [3, 0, 2, 1]\n",
+      " 5 [4, 1, 0, 2, 3]\n",
+      " 6 [1, 2, 0, 4, 3, 5]\n",
+      " 7 [3, 2, 1, 4, 0, 6, 5]\n",
       "Random derangements:\n",
       " 2 [1, 0]\n",
       " 3 [1, 2, 0]\n",
-      " 4 [2, 3, 1, 0]\n",
-      " 5 [3, 4, 0, 2, 1]\n",
-      " 6 [1, 2, 3, 5, 0, 4]\n",
-      " 7 [1, 6, 5, 4, 0, 2, 3]\n",
-      "2021-06-11 15:07:36,585 Stop MPyC runtime -- elapsed time: 0:00:00.900950\n"
+      " 4 [3, 0, 1, 2]\n",
+      " 5 [1, 3, 4, 2, 0]\n",
+      " 6 [2, 3, 5, 4, 1, 0]\n",
+      " 7 [6, 3, 4, 1, 2, 0, 5]\n",
+      "2022-03-03 11:54:33,549 Stop MPyC runtime -- elapsed time: 0:00:00.936067\n"
      ]
     }
    ],
@@ -606,7 +607,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The code can be run with any number of parties $m=1,2,3,4,5,6,7,...$ of which no more than $t$ are assumed to be corrupt, with $0\\leq t\\leq \\lfloor (m-1)/2 \\rfloor$. As a final example, we show a run with $m=8$ parties, with the treshold set to $t=2$."
+    "The code can be run with any number of parties $m=1,2,3,4,5,6,7,...$ of which no more than $t$ are assumed to be corrupt, with $0\\leq t\\leq \\lfloor (m-1)/2 \\rfloor$. As a final example, we show a run with $m=8$ parties, with the threshold set to $t=2$."
    ]
   },
   {
@@ -620,33 +621,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-11 15:07:39,108 Start MPyC runtime v0.7.6\n",
-      "2021-06-11 15:07:39,655 All 8 parties connected.\n",
+      "2022-03-03 11:54:35,796 Start MPyC runtime v0.8.2\n",
+      "2022-03-03 11:54:36,342 All 8 parties connected.\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
-      " 2 [1, 0]\n",
-      " 3 [1, 0, 0]\n",
-      " 4 [0, 0, 0, 1]\n",
-      " 5 [0, 1, 0, 0, 0]\n",
-      " 6 [1, 0, 0, 0, 0, 0]\n",
-      " 7 [0, 0, 0, 1, 0, 0, 0]\n",
+      " 2 [0, 1]\n",
+      " 3 [0, 1, 0]\n",
+      " 4 [0, 0, 1, 0]\n",
+      " 5 [1, 0, 0, 0, 0]\n",
+      " 6 [0, 1, 0, 0, 0, 0]\n",
+      " 7 [0, 0, 0, 0, 1, 0, 0]\n",
       "Random permutations:\n",
       " 1 [0]\n",
       " 2 [1, 0]\n",
-      " 3 [2, 1, 0]\n",
-      " 4 [0, 3, 1, 2]\n",
-      " 5 [4, 3, 1, 0, 2]\n",
-      " 6 [2, 4, 5, 3, 1, 0]\n",
-      " 7 [5, 4, 3, 1, 0, 2, 6]\n",
+      " 3 [2, 0, 1]\n",
+      " 4 [0, 1, 3, 2]\n",
+      " 5 [4, 1, 3, 2, 0]\n",
+      " 6 [3, 2, 4, 0, 5, 1]\n",
+      " 7 [0, 1, 5, 6, 2, 3, 4]\n",
       "Random derangements:\n",
       " 2 [1, 0]\n",
-      " 3 [1, 2, 0]\n",
-      " 4 [3, 2, 0, 1]\n",
-      " 5 [2, 3, 0, 4, 1]\n",
-      " 6 [1, 2, 5, 0, 3, 4]\n",
-      " 7 [5, 3, 6, 2, 1, 0, 4]\n",
-      "2021-06-11 15:07:40,308 Stop MPyC runtime -- elapsed time: 0:00:01.200208\n"
+      " 3 [2, 0, 1]\n",
+      " 4 [1, 0, 3, 2]\n",
+      " 5 [1, 0, 4, 2, 3]\n",
+      " 6 [3, 4, 5, 1, 0, 2]\n",
+      " 7 [1, 6, 5, 0, 2, 4, 3]\n",
+      "2022-03-03 11:54:37,299 Stop MPyC runtime -- elapsed time: 0:00:01.503532\n"
      ]
     }
    ],
@@ -664,7 +665,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
