--- a/demos/4demos.ipynb
+++ b/demos/4demos.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "from mpyc.runtime import mpc\n",
-    "import secretsanta, id3gini, lpsolver, cnnmnist"
+    "import secretsanta, id3gini, lpsolver, np_cnnmnist"
    ]
   },
   {
@@ -44,64 +44,64 @@
      "output_type": "stream",
      "text": [
       "Setting input to default = 8\n",
-      "2020-07-18 10:43:57,868 Start MPyC runtime v0.6.8\n",
+      "2022-09-17 10:37:18,694 Start MPyC runtime v0.8.8\n",
       "Using secure integers: SecInt32\n",
       "2 [1, 0]\n",
       "3 [2, 0, 1]\n",
-      "4 [2, 3, 0, 1]\n",
-      "5 [1, 2, 0, 4, 3]\n",
-      "6 [2, 3, 0, 1, 5, 4]\n",
-      "7 [4, 3, 1, 0, 6, 2, 5]\n",
-      "8 [7, 3, 4, 1, 0, 2, 5, 6]\n",
+      "4 [3, 2, 1, 0]\n",
+      "5 [1, 4, 0, 2, 3]\n",
+      "6 [3, 4, 5, 0, 2, 1]\n",
+      "7 [2, 3, 6, 0, 5, 1, 4]\n",
+      "8 [2, 0, 6, 5, 7, 4, 1, 3]\n",
       "Using secure fixed-point numbers: SecFxp32:16\n",
       "2 [1.0, 0.0]\n",
-      "3 [1.0, 2.0, 0.0]\n",
-      "4 [2.0, 3.0, 1.0, 0.0]\n",
-      "5 [4.0, 0.0, 1.0, 2.0, 3.0]\n",
-      "6 [1.0, 4.0, 3.0, 0.0, 5.0, 2.0]\n",
-      "7 [2.0, 5.0, 6.0, 0.0, 1.0, 4.0, 3.0]\n",
-      "8 [3.0, 4.0, 7.0, 2.0, 6.0, 0.0, 5.0, 1.0]\n",
-      "Using secure prime fields: SecFld3(GF(11))\n",
+      "3 [2.0, 0.0, 1.0]\n",
+      "4 [3.0, 2.0, 0.0, 1.0]\n",
+      "5 [3.0, 4.0, 1.0, 2.0, 0.0]\n",
+      "6 [5.0, 0.0, 4.0, 1.0, 2.0, 3.0]\n",
+      "7 [6.0, 4.0, 1.0, 2.0, 3.0, 0.0, 5.0]\n",
+      "8 [7.0, 0.0, 4.0, 1.0, 6.0, 3.0, 2.0, 5.0]\n",
+      "Using secure prime fields: SecFld4(GF(11))\n",
       "2 [1, 0]\n",
       "3 [1, 2, 0]\n",
-      "4 [1, 2, 3, 0]\n",
-      "5 [1, 0, 4, 2, 3]\n",
-      "6 [2, 3, 1, 0, 5, 4]\n",
-      "7 [2, 6, 3, 4, 1, 0, 5]\n",
-      "8 [6, 5, 7, 1, 2, 0, 3, 4]\n",
+      "4 [2, 3, 1, 0]\n",
+      "5 [1, 3, 4, 0, 2]\n",
+      "6 [4, 2, 5, 0, 3, 1]\n",
+      "7 [4, 5, 1, 0, 6, 2, 3]\n",
+      "8 [5, 4, 3, 1, 2, 0, 7, 6]\n",
       "Using secure binary fields: SecFld3(GF(2^3))\n",
       "2 [1, 0]\n",
-      "3 [1, x, 0]\n",
-      "4 [x+1, x, 1, 0]\n",
-      "5 [1, 0, x^2, x, x+1]\n",
-      "6 [x, x+1, x^2+1, x^2, 0, 1]\n",
-      "7 [x+1, x^2+x, 0, x^2+1, 1, x^2, x]\n",
-      "8 [x^2+x, x^2+x+1, x^2+1, 1, 0, x, x+1, x^2]\n",
-      "Using secure quinary fields: SecFld4(GF(5^2))\n",
+      "3 [x, 0, 1]\n",
+      "4 [x, 0, x+1, 1]\n",
+      "5 [x^2, 0, 1, x, x+1]\n",
+      "6 [x^2, x, 1, x^2+1, x+1, 0]\n",
+      "7 [x^2+1, 0, x+1, x^2+x, 1, x^2, x]\n",
+      "8 [x^2+x+1, x^2+1, 1, x^2+x, x, 0, x+1, x^2]\n",
+      "Using secure quinary fields: SecFld5(GF(5^2))\n",
       "2 [1, 0]\n",
       "3 [2, 0, 1]\n",
-      "4 [2, 3, 0, 1]\n",
-      "5 [4, 0, 3, 1, 2]\n",
-      "6 [x, 2, 4, 1, 3, 0]\n",
-      "7 [3, x+1, 0, 4, 2, 1, x]\n",
-      "8 [x+1, x, 4, 2, 0, x+2, 3, 1]\n",
-      "Using secure extension fields (medium prime): SecFld24(GF(11^7))\n",
+      "4 [3, 2, 1, 0]\n",
+      "5 [2, 4, 0, 1, 3]\n",
+      "6 [1, 4, 0, 2, x, 3]\n",
+      "7 [x, 4, x+1, 2, 0, 1, 3]\n",
+      "8 [x, 0, x+2, 4, 3, 2, 1, x+1]\n",
+      "Using secure extension fields (medium prime): SecFld25(GF(11^7))\n",
       "2 [1, 0]\n",
       "3 [1, 2, 0]\n",
-      "4 [1, 0, 3, 2]\n",
-      "5 [2, 3, 1, 4, 0]\n",
-      "6 [4, 0, 3, 2, 5, 1]\n",
-      "7 [6, 0, 1, 2, 3, 4, 5]\n",
-      "8 [5, 6, 1, 0, 2, 7, 4, 3]\n",
-      "Using secure extension fields (larger prime): SecFld30(GF(1031^3))\n",
+      "4 [3, 2, 1, 0]\n",
+      "5 [3, 4, 1, 2, 0]\n",
+      "6 [3, 0, 1, 5, 2, 4]\n",
+      "7 [2, 5, 0, 4, 3, 6, 1]\n",
+      "8 [4, 6, 1, 5, 0, 3, 7, 2]\n",
+      "Using secure extension fields (larger prime): SecFld31(GF(1031^3))\n",
       "2 [1, 0]\n",
       "3 [2, 0, 1]\n",
-      "4 [2, 3, 1, 0]\n",
-      "5 [1, 3, 4, 2, 0]\n",
-      "6 [2, 4, 1, 5, 3, 0]\n",
-      "7 [6, 3, 4, 0, 2, 1, 5]\n",
-      "8 [1, 4, 5, 2, 6, 7, 0, 3]\n",
-      "2020-07-18 10:43:58,509 Stop MPyC runtime -- elapsed time: 0:00:00.637958\n"
+      "4 [3, 2, 1, 0]\n",
+      "5 [2, 3, 4, 0, 1]\n",
+      "6 [3, 5, 0, 2, 1, 4]\n",
+      "7 [1, 3, 6, 0, 5, 2, 4]\n",
+      "8 [5, 7, 0, 4, 6, 1, 3, 2]\n",
+      "2022-09-17 10:37:19,273 Stop MPyC runtime -- elapsed time: 0:00:00.575169\n"
      ]
     }
    ],
@@ -120,16 +120,16 @@
      "text": [
       "Using secure integers: SecInt32\n",
       "dataset: tennis with 14 samples and 4 attributes\n",
-      "2020-07-18 10:43:58,529 Start MPyC runtime v0.6.8\n",
-      "2020-07-18 10:43:58,537 Attribute node 0\n",
-      "2020-07-18 10:43:58,540 Leaf node label 1\n",
-      "2020-07-18 10:43:58,548 Attribute node 3\n",
-      "2020-07-18 10:43:58,551 Leaf node label 0\n",
-      "2020-07-18 10:43:58,554 Leaf node label 1\n",
-      "2020-07-18 10:43:58,562 Attribute node 2\n",
-      "2020-07-18 10:43:58,565 Leaf node label 0\n",
-      "2020-07-18 10:43:58,568 Leaf node label 1\n",
-      "2020-07-18 10:43:58,568 Stop MPyC runtime -- elapsed time: 0:00:00.037977\n",
+      "2022-09-17 10:37:19,293 Start MPyC runtime v0.8.8\n",
+      "2022-09-17 10:37:19,300 Attribute node 0\n",
+      "2022-09-17 10:37:19,303 Leaf node label 1\n",
+      "2022-09-17 10:37:19,309 Attribute node 3\n",
+      "2022-09-17 10:37:19,312 Leaf node label 0\n",
+      "2022-09-17 10:37:19,315 Leaf node label 1\n",
+      "2022-09-17 10:37:19,320 Attribute node 2\n",
+      "2022-09-17 10:37:19,323 Leaf node label 0\n",
+      "2022-09-17 10:37:19,325 Leaf node label 1\n",
+      "2022-09-17 10:37:19,326 Stop MPyC runtime -- elapsed time: 0:00:00.032990\n",
       "Decision tree of depth 2 and size 8: \n",
       "if Outlook == Overcast: Yes\n",
       "if Outlook == Rain: \n",
@@ -156,15 +156,15 @@
      "text": [
       "Using secure 8-bit integers: SecInt8\n",
       "dataset: uvlp with 2 constraints and 3 variables (scale factor 1)\n",
-      "2020-07-18 10:43:58,576 Start MPyC runtime v0.6.8\n",
-      "2020-07-18 10:43:58,581 Iteration 1/2: 0.0 pivot=1.0\n",
-      "2020-07-18 10:43:58,586 Iteration 2/2: 10.0 pivot=3.0\n",
+      "2022-09-17 10:37:19,340 Start MPyC runtime v0.8.8\n",
+      "2022-09-17 10:37:19,344 Iteration 1/2: 0.0 pivot=1.0\n",
+      "2022-09-17 10:37:19,349 Iteration 2/2: 10.0 pivot=3.0\n",
       "max = 37 / 3 / 1 = 12.333333333333334 in 2 iterations\n",
-      "2020-07-18 10:43:58,590 Solution x\n",
-      "2020-07-18 10:43:58,594 Dual solution y\n",
-      "verification c.x == y.b, A.x <= b, x >= 0, y.A <= c, y <= 0: True\n",
+      "2022-09-17 10:37:19,352 Solution x\n",
+      "2022-09-17 10:37:19,355 Dual solution y\n",
+      "verification c.x == y.b, A.x <= b, x >= 0, y.A >= c, y >= 0: True\n",
       "solution = [1.3333333333333333, 0.3333333333333333, 0.0]\n",
-      "2020-07-18 10:43:58,598 Stop MPyC runtime -- elapsed time: 0:00:00.020999\n"
+      "2022-09-17 10:37:19,360 Stop MPyC runtime -- elapsed time: 0:00:00.019084\n"
      ]
     }
    ],
@@ -181,71 +181,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-07-18 10:43:58,608 Start MPyC runtime v0.6.8\n",
-      "2020-07-18 10:43:58,608 --------------- INPUT   -------------\n",
-      "Type = SecInt37, range = (1337, 1338)\n",
-      "Labels: [2]\n",
+      "2022-09-17 10:37:19,370 Start MPyC runtime v0.8.8\n",
+      "2022-09-17 10:37:19,371 --------------- INPUT   -------------\n",
+      "Type = SecInt37, range = (1488, 1489)\n",
+      "Labels: [4]\n",
       "[[0000000000000000000000000000]\n",
       " [0000000000000000000000000000]\n",
-      " [0000000011111000000000000000]\n",
-      " [0000000011111100000000000000]\n",
-      " [0000000111111110000000000000]\n",
-      " [0000000011111110000000000000]\n",
-      " [0000000000011110000000000000]\n",
-      " [0000000000011110000000000000]\n",
-      " [0000000000011110000000000000]\n",
-      " [0000000000111110000000000000]\n",
-      " [0000000000111110000000000000]\n",
-      " [0000000000111110000000000000]\n",
-      " [0000000001111100000000000000]\n",
-      " [0000000001111100000000000000]\n",
-      " [0000000011111000000000000000]\n",
-      " [0000000011111000000000000000]\n",
-      " [0000000011110000000001110000]\n",
-      " [0000000011111000111111111000]\n",
-      " [0000000011111111111111111000]\n",
-      " [0000000011111111111111111000]\n",
-      " [0000000001111111111111110000]\n",
-      " [0000000000111111111000000000]\n",
       " [0000000000000000000000000000]\n",
       " [0000000000000000000000000000]\n",
+      " [0000000000000000000000000000]\n",
+      " [0000000000000000000000000000]\n",
+      " [0000000110000000000000111000]\n",
+      " [0000001111000000000011111000]\n",
+      " [0000011111000000000111111000]\n",
+      " [0000011111000000000111111000]\n",
+      " [0000011111000000000111110000]\n",
+      " [0000011110000000001111100000]\n",
+      " [0000011110000000001111100000]\n",
+      " [0000011110000000011111000000]\n",
+      " [0000011110000000111111000000]\n",
+      " [0000011110000001111110000000]\n",
+      " [0000011111000111111110000000]\n",
+      " [0000011111111111111100000000]\n",
+      " [0000001111111111111100000000]\n",
+      " [0000000111111100111110000000]\n",
+      " [0000000000000000011110000000]\n",
+      " [0000000000000000011111000000]\n",
+      " [0000000000000000011110000000]\n",
+      " [0000000000000000001110000000]\n",
       " [0000000000000000000000000000]\n",
       " [0000000000000000000000000000]\n",
       " [0000000000000000000000000000]\n",
       " [0000000000000000000000000000]]\n",
-      "2020-07-18 10:43:58,653 --------------- LAYER 1 -------------\n",
-      "2020-07-18 10:43:58,654 - - - - - - - - conv2d  - - - - - - -\n",
-      "2020-07-18 10:43:58,975 Barrier 0 0\n",
-      "2020-07-18 10:43:58,975 - - - - - - - - maxpool - - - - - - -\n",
-      "2020-07-18 10:44:07,942 Barrier 0 0\n",
-      "2020-07-18 10:44:07,942 - - - - - - - - ReLU    - - - - - - -\n",
-      "2020-07-18 10:44:10,912 Barrier 0 0\n",
-      "2020-07-18 10:44:10,912 --------------- LAYER 2 -------------\n",
-      "2020-07-18 10:44:11,002 - - - - - - - - conv2d  - - - - - - -\n",
-      "2020-07-18 10:44:11,916 Barrier 1 0\n",
-      "2020-07-18 10:44:12,772 Barrier 1 0\n",
-      "2020-07-18 10:44:13,619 Barrier 1 0\n",
-      "2020-07-18 10:44:14,465 Barrier 1 0\n",
-      "2020-07-18 10:44:14,602 Barrier 0 0\n",
-      "2020-07-18 10:44:14,602 - - - - - - - - maxpool - - - - - - -\n",
-      "2020-07-18 10:44:19,809 Barrier 0 0\n",
-      "2020-07-18 10:44:19,809 - - - - - - - - ReLU    - - - - - - -\n",
-      "2020-07-18 10:44:21,548 Barrier 0 0\n",
-      "2020-07-18 10:44:21,548 --------------- LAYER 3 -------------\n",
-      "2020-07-18 10:44:26,691 - - - - - - - - fc      - - - - - - -\n",
-      "2020-07-18 10:44:29,425 - - - - - - - - ReLU    - - - - - - -\n",
-      "2020-07-18 10:44:30,078 Barrier 0 0\n",
-      "2020-07-18 10:44:30,078 --------------- LAYER 4 -------------\n",
-      "2020-07-18 10:44:30,298 - - - - - - - - fc      - - - - - - -\n",
-      "2020-07-18 10:44:30,314 --------------- OUTPUT  -------------\n",
-      "Image #1337 with label 2: 2 predicted. \n",
-      "[803671699, -820964441, 18182689095, -7857483958, 450677317, -9874255004, 7012023464, -9834985682, -6607493709, -14607362599]\n",
-      "2020-07-18 10:44:30,329 Stop MPyC runtime -- elapsed time: 0:00:31.721460\n"
+      "2022-09-17 10:37:19,414 --------------- LAYER 1 -------------\n",
+      "2022-09-17 10:37:19,414 - - - - - - - - conv2d  - - - - - - -\n",
+      "2022-09-17 10:37:19,461 - - - - - - - - maxpool - - - - - - -\n",
+      "2022-09-17 10:37:20,767 - - - - - - - - ReLU    - - - - - - -\n",
+      "2022-09-17 10:37:21,197 Barrier-after-layer-1 0 0\n",
+      "2022-09-17 10:37:21,197 --------------- LAYER 2 -------------\n",
+      "2022-09-17 10:37:21,223 - - - - - - - - conv2d  - - - - - - -\n",
+      "2022-09-17 10:37:22,222 - - - - - - - - maxpool - - - - - - -\n",
+      "2022-09-17 10:37:23,136 - - - - - - - - ReLU    - - - - - - -\n",
+      "2022-09-17 10:37:23,429 Barrier-after-layer-2 0 0\n",
+      "2022-09-17 10:37:23,429 --------------- LAYER 3 -------------\n",
+      "2022-09-17 10:37:24,266 - - - - - - - - fc 3136 x 1024  - - -\n",
+      "2022-09-17 10:37:24,422 - - - - - - - - ReLU    - - - - - - -\n",
+      "2022-09-17 10:37:24,562 Barrier-after-layer-3 0 0\n",
+      "2022-09-17 10:37:24,562 --------------- LAYER 4 -------------\n",
+      "2022-09-17 10:37:24,607 - - - - - - - - fc 1024 x 10  - - - -\n",
+      "2022-09-17 10:37:24,608 --------------- OUTPUT  -------------\n",
+      "Image #1488 with label 4: 4 predicted. \n",
+      "[-3754640229 -3026277190 -6936057232 -10456779375 20035698270 -8239621192\n",
+      " -3735898106 -6070673158 -6724021956 -370619516]\n",
+      "2022-09-17 10:37:24,616 Stop MPyC runtime -- elapsed time: 0:00:05.244793\n"
      ]
     }
    ],
    "source": [
-    "mpc.run(cnnmnist.main()) # takes a minute or so"
+    "mpc.run(np_cnnmnist.main())"
    ]
   },
   {
@@ -269,45 +262,45 @@
       "Using secure integers: SecInt32\n",
       "2 [1, 0]\n",
       "3 [1, 2, 0]\n",
-      "4 [3, 2, 1, 0]\n",
-      "5 [2, 4, 0, 1, 3]\n",
-      "6 [2, 3, 4, 5, 1, 0]\n",
+      "4 [1, 3, 0, 2]\n",
+      "5 [1, 2, 3, 4, 0]\n",
+      "6 [2, 0, 4, 5, 1, 3]\n",
       "Using secure fixed-point numbers: SecFxp32:16\n",
       "2 [1.0, 0.0]\n",
-      "3 [1.0, 2.0, 0.0]\n",
-      "4 [1.0, 3.0, 0.0, 2.0]\n",
-      "5 [3.0, 2.0, 4.0, 0.0, 1.0]\n",
-      "6 [2.0, 3.0, 4.0, 5.0, 0.0, 1.0]\n",
-      "Using secure prime fields: SecFld2(GF(7))\n",
-      "2 [1, 0]\n",
-      "3 [1, 2, 0]\n",
-      "4 [2, 3, 1, 0]\n",
-      "5 [2, 3, 4, 1, 0]\n",
-      "6 [3, 2, 4, 1, 5, 0]\n",
-      "Using secure binary fields: SecFld3(GF(2^3))\n",
-      "2 [1, 0]\n",
-      "3 [1, x, 0]\n",
-      "4 [1, x, x+1, 0]\n",
-      "5 [x+1, x, 1, x^2, 0]\n",
-      "6 [x, x^2, 1, x^2+1, x+1, 0]\n",
-      "Using secure quinary fields: SecFld4(GF(5^2))\n",
-      "2 [1, 0]\n",
-      "3 [1, 2, 0]\n",
-      "4 [2, 3, 1, 0]\n",
-      "5 [3, 0, 4, 1, 2]\n",
-      "6 [1, 4, 3, 2, x, 0]\n",
-      "Using secure extension fields (medium prime): SecFld24(GF(11^7))\n",
+      "3 [2.0, 0.0, 1.0]\n",
+      "4 [2.0, 0.0, 3.0, 1.0]\n",
+      "5 [1.0, 4.0, 3.0, 2.0, 0.0]\n",
+      "6 [3.0, 4.0, 0.0, 5.0, 2.0, 1.0]\n",
+      "Using secure prime fields: SecFld3(GF(7))\n",
       "2 [1, 0]\n",
       "3 [2, 0, 1]\n",
-      "4 [3, 0, 1, 2]\n",
-      "5 [3, 4, 0, 2, 1]\n",
-      "6 [5, 4, 3, 2, 1, 0]\n",
-      "Using secure extension fields (larger prime): SecFld30(GF(1031^3))\n",
+      "4 [1, 0, 3, 2]\n",
+      "5 [1, 0, 3, 4, 2]\n",
+      "6 [1, 2, 5, 0, 3, 4]\n",
+      "Using secure binary fields: SecFld3(GF(2^3))\n",
+      "2 [1, 0]\n",
+      "3 [x, 0, 1]\n",
+      "4 [x, x+1, 1, 0]\n",
+      "5 [1, x^2, 0, x, x+1]\n",
+      "6 [x+1, x^2, x^2+1, 1, x, 0]\n",
+      "Using secure quinary fields: SecFld5(GF(5^2))\n",
       "2 [1, 0]\n",
       "3 [1, 2, 0]\n",
-      "4 [2, 0, 3, 1]\n",
+      "4 [3, 2, 0, 1]\n",
+      "5 [2, 4, 0, 1, 3]\n",
+      "6 [2, 4, 3, x, 0, 1]\n",
+      "Using secure extension fields (medium prime): SecFld25(GF(11^7))\n",
+      "2 [1, 0]\n",
+      "3 [2, 0, 1]\n",
+      "4 [1, 0, 3, 2]\n",
+      "5 [4, 2, 3, 0, 1]\n",
+      "6 [1, 2, 3, 0, 5, 4]\n",
+      "Using secure extension fields (larger prime): SecFld31(GF(1031^3))\n",
+      "2 [1, 0]\n",
+      "3 [1, 2, 0]\n",
+      "4 [1, 0, 3, 2]\n",
       "5 [2, 0, 3, 4, 1]\n",
-      "6 [4, 5, 3, 2, 1, 0]\n",
+      "6 [4, 5, 3, 2, 0, 1]\n",
       "\n",
       "Using secure integers: SecInt95\n",
       "dataset: car with 1728 samples and 6 attributes\n",
@@ -340,41 +333,42 @@
       "Using secure 6-bit integers: SecInt6\n",
       "dataset: wiki with 2 constraints and 3 variables (scale factor 1)\n",
       "max = 60 / 3 / 1 = 20.0 in 1 iterations\n",
-      "verification c.x == y.b, A.x <= b, x >= 0, y.A <= c, y <= 0: True\n",
+      "verification c.x == y.b, A.x <= b, x >= 0, y.A >= c, y >= 0: True\n",
       "solution = [0.0, 0.0, 5.0]\n",
       "\n",
-      "Type = SecFxp10:4, range = (5095, 5096)\n",
-      "Labels: [2]\n",
+      "Type = SecFxp10:4, range = (4269, 4270)\n",
+      "Labels: [4]\n",
       "[[0000000000000000000000000000]\n",
       " [0000000000000000000000000000]\n",
+      " [0000001110000000000000000000]\n",
+      " [0000001100000000000000000000]\n",
+      " [0000001100000000000000000000]\n",
+      " [0000001110000000000000000000]\n",
+      " [0000001110000000000000000000]\n",
+      " [0000001110000000000110000000]\n",
+      " [0000001110000000000110000000]\n",
+      " [0000001110000000000110000000]\n",
+      " [0000001110000000000110000000]\n",
+      " [0000001110000000000110000000]\n",
+      " [0000001111000000000111000000]\n",
+      " [0000001111000000000111000000]\n",
+      " [0000000111000000000111000000]\n",
+      " [0000000111000000011111000000]\n",
+      " [0000000111101111111111100000]\n",
+      " [0000000111111111111111100000]\n",
+      " [0000000011111111111111100000]\n",
+      " [0000000001111111000011110000]\n",
+      " [0000000000000000000011110000]\n",
+      " [0000000000000000000001110000]\n",
       " [0000000000000000000000000000]\n",
       " [0000000000000000000000000000]\n",
-      " [0000000000000000110000000000]\n",
-      " [0000000000001111111100000000]\n",
-      " [0000000000111111111110000000]\n",
-      " [0000000001111111111111000000]\n",
-      " [0000000001111111111111000000]\n",
-      " [0000000001111111111111100000]\n",
-      " [0000000001111110011111100000]\n",
-      " [0000000000000000011111100000]\n",
-      " [0000000000000000011111000000]\n",
-      " [0000000000000000011110000000]\n",
-      " [0000000000000000111110000000]\n",
-      " [0000000000011111111100000000]\n",
-      " [0000001111111111111111100000]\n",
-      " [0000011111111111111111110000]\n",
-      " [0000011111111111111111111000]\n",
-      " [0000011111111111111111111000]\n",
-      " [0000011111111110000000111000]\n",
-      " [0000011111111100000000000000]\n",
-      " [0000011111110000000000000000]\n",
-      " [0000001111000000000000000000]\n",
       " [0000000000000000000000000000]\n",
       " [0000000000000000000000000000]\n",
       " [0000000000000000000000000000]\n",
       " [0000000000000000000000000000]]\n",
-      "Image #5095 with label 2: 2 predicted. \n",
-      "[-4.125, -3.1875, 18.625, 0.25, -4.75, -10.3125, -15.0625, 1.5, -1.25, -6.5]\n"
+      "Image #4269 with label 4: 4 predicted. \n",
+      "[-5.25   -4.8125 -3.6875 -9.0625 17.375  -5.6875  0.     -5.5    -8.\n",
+      " -1.3125]\n"
      ]
     }
    ],
@@ -398,7 +392,7 @@
     "print()\n",
     "\n",
     "sys.argv[1:] = ['1.5']  # forces use of secure fixed-point arithmetic\n",
-    "mpc.run(cnnmnist.main())     # takes a minute or so\n",
+    "mpc.run(np_cnnmnist.main())  # faster than secure integers\n",
     "\n",
     "sys.argv[1:] = []"
    ]
@@ -406,7 +400,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -420,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
