Update some READMEs and tests.

--- a/demos/OneWayHashChainsExplained.ipynb
+++ b/demos/OneWayHashChainsExplained.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "[Hash chains](https://en.wikipedia.org/wiki/Hash_chain) are well-known as a simple and efficient solution for asymmetric identification and authentication. They appear in many guises, often in contexts with severe performance constraints. For example, the [TESLA](https://www.rfc-editor.org/info/rfc4082) scheme and friends use hash chains at their core and provide authentication in wireless sensor networks and satellite communication.\n",
     "\n",
-    "In this notebook we construct an MPyC program for handling hash chains in a multiparty setting. There will be no single point of failure, as no single party will ever know the secret information from which the hash chains are built. This way of protecting secret keys is similar to what companies like [Sepior](https://sepior.com/) and [Unbound](https://www.unboundsecurity.com/) do using threshold cryptography and MPC-based hardware security modules (HSMs).\n",
+    "In this notebook we construct an MPyC program for handling hash chains in a multiparty setting. There will be no single point of failure, as no single party will ever know the secret information from which the hash chains are built. This way of protecting secret keys is similar to what companies like [Sepior](https://sepior.com/) and [Unbound](https://github.com/unboundsecurity) do using threshold cryptography and MPC-based hardware security modules (HSMs).\n",
     "\n",
     "## Hash Chains\n",
     "\n",
@@ -184,21 +184,21 @@
      "output_type": "stream",
      "text": [
       "Order-0 hash chain of length 1 (1 rounds):\n",
-      " 1 x0 = dce02350924adb59103b4000066ba9b2\n",
+      " 1 x0 = 604fc4433bbbba2e5c4796510010ed48\n",
       "\n",
       "Order-1 hash chain of length 2 (3 rounds):\n",
       " 1 -\n",
-      " 2 x1 = 1f25ad5f0aec7b7da294b0eaf8a197ad\n",
-      " 3 x0 = dce02350924adb59103b4000066ba9b2\n",
+      " 2 x1 = fe242be2c20da3cd87370d1614277d0d\n",
+      " 3 x0 = 604fc4433bbbba2e5c4796510010ed48\n",
       "\n",
       "Order-2 hash chain of length 4 (7 rounds):\n",
       " 1 -\n",
       " 2 -\n",
       " 3 -\n",
-      " 4 x3 = 86310b3f27481602941f8092771b6b45\n",
-      " 5 x2 = 0f3d5981719b4410636824cb98433953\n",
-      " 6 x1 = 1f25ad5f0aec7b7da294b0eaf8a197ad\n",
-      " 7 x0 = dce02350924adb59103b4000066ba9b2\n",
+      " 4 x3 = fb38d81680a23a43d8063ee81de10c90\n",
+      " 5 x2 = 8b613cbcfaa17ff36b1823d599f535e2\n",
+      " 6 x1 = fe242be2c20da3cd87370d1614277d0d\n",
+      " 7 x0 = 604fc4433bbbba2e5c4796510010ed48\n",
       "\n",
       "Order-3 hash chain of length 8 (15 rounds):\n",
       " 1 -\n",
@@ -208,14 +208,14 @@
       " 5 -\n",
       " 6 -\n",
       " 7 -\n",
-      " 8 x7 = d06f7022bce379c300c5522b5859be10\n",
-      " 9 x6 = 6bd7f5507fe750c620e562b5740d1618\n",
-      "10 x5 = 21f54ab687cd1e4d8fbfa1b25401887a\n",
-      "11 x4 = 7cc31a0733a1c1f9dc4723d56976dc37\n",
-      "12 x3 = 86310b3f27481602941f8092771b6b45\n",
-      "13 x2 = 0f3d5981719b4410636824cb98433953\n",
-      "14 x1 = 1f25ad5f0aec7b7da294b0eaf8a197ad\n",
-      "15 x0 = dce02350924adb59103b4000066ba9b2\n",
+      " 8 x7 = 104a0c631c5a3fdac68ddc47dc140bce\n",
+      " 9 x6 = a5a807b0270387b6a599545bf23a455c\n",
+      "10 x5 = 74ba842fc3c53005b3ba4a3d56ae3228\n",
+      "11 x4 = 5f6d0953546e5fbdc4a4c1f3cd1dd380\n",
+      "12 x3 = fb38d81680a23a43d8063ee81de10c90\n",
+      "13 x2 = 8b613cbcfaa17ff36b1823d599f535e2\n",
+      "14 x1 = fe242be2c20da3cd87370d1614277d0d\n",
+      "15 x0 = 604fc4433bbbba2e5c4796510010ed48\n",
       "\n"
      ]
     }
@@ -238,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Python program [onewayhashchains.py](onewayhashchains.py) follows the same approach as presented in this notebook. In addition to the recursive pebbler shown above, however, the optimal binary pebbler is also implemented as an iterative algorithm."
+    "The Python program [onewayhashchains.py](onewayhashchains.py) follows the same approach as presented in this notebook. In addition to the recursive pebbler shown above, however, the optimal binary pebbler is also implemented as an iterative algorithm. Moreover, [np_onewayhashchains.py](np_onewayhashchains.py) demos the use of the faster Numpy-based [np_aes.py](np_aes.py) reimplementation of the AES demo as well as the use of the Numpy-based [sha3.py](sha3.py) threshold SHA-3 hash functions."
    ]
   }
  ],
