Finalize v0.9 with secure NumPy arrays.

--- a/demos/SecureSortingNetsExplained.ipynb
+++ b/demos/SecureSortingNetsExplained.ipynb
@@ -36,7 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-03-03 11:49:20,287 Start MPyC runtime v0.8.2\n"
+      "2023-02-25 15:59:52,240 Start MPyC runtime v0.9\n"
      ]
     }
    ],
@@ -140,11 +140,11 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\Berry\\AppData\\Local\\Temp\\ipykernel_7188\\3699103182.py\", line 3, in <cell line: 2>\n",
+      "  File \"C:\\Users\\Berry\\AppData\\Local\\Temp\\ipykernel_9728\\3699103182.py\", line 3, in <module>\n",
       "    for i in oddeven_merge_sort(len(x)): compare_and_swap(x, *i)\n",
-      "  File \"C:\\Users\\Berry\\AppData\\Local\\Temp\\ipykernel_7188\\2407566342.py\", line 30, in compare_and_swap\n",
+      "  File \"C:\\Users\\Berry\\AppData\\Local\\Temp\\ipykernel_9728\\2407566342.py\", line 30, in compare_and_swap\n",
       "    if x[a] > x[b]:\n",
-      "  File \"C:\\Users\\Berry\\Documents\\GitHub\\mympyc\\mpyc\\sectypes.py\", line 63, in __bool__\n",
+      "  File \"C:\\Users\\Berry\\Documents\\GitHub\\mympyc\\mpyc\\sectypes.py\", line 69, in __bool__\n",
       "    raise TypeError('cannot use secure type in Boolean expressions')\n",
       "TypeError: cannot use secure type in Boolean expressions\n"
      ]
@@ -290,19 +290,19 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\Berry\\AppData\\Local\\Temp\\ipykernel_7188\\4181753287.py\", line 3, in <cell line: 2>\n",
+      "  File \"C:\\Users\\Berry\\AppData\\Local\\Temp\\ipykernel_9728\\4181753287.py\", line 3, in <module>\n",
       "    bitonic_sort(True, x)\n",
-      "  File \"C:\\Users\\Berry\\AppData\\Local\\Temp\\ipykernel_7188\\225220890.py\", line 5, in bitonic_sort\n",
+      "  File \"C:\\Users\\Berry\\AppData\\Local\\Temp\\ipykernel_9728\\225220890.py\", line 5, in bitonic_sort\n",
       "    first = bitonic_sort(True, x[:len(x) // 2])\n",
-      "  File \"C:\\Users\\Berry\\AppData\\Local\\Temp\\ipykernel_7188\\225220890.py\", line 5, in bitonic_sort\n",
+      "  File \"C:\\Users\\Berry\\AppData\\Local\\Temp\\ipykernel_9728\\225220890.py\", line 5, in bitonic_sort\n",
       "    first = bitonic_sort(True, x[:len(x) // 2])\n",
-      "  File \"C:\\Users\\Berry\\AppData\\Local\\Temp\\ipykernel_7188\\225220890.py\", line 7, in bitonic_sort\n",
+      "  File \"C:\\Users\\Berry\\AppData\\Local\\Temp\\ipykernel_9728\\225220890.py\", line 7, in bitonic_sort\n",
       "    return bitonic_merge(up, first + second)\n",
-      "  File \"C:\\Users\\Berry\\AppData\\Local\\Temp\\ipykernel_7188\\225220890.py\", line 14, in bitonic_merge\n",
+      "  File \"C:\\Users\\Berry\\AppData\\Local\\Temp\\ipykernel_9728\\225220890.py\", line 14, in bitonic_merge\n",
       "    bitonic_compare(up, x)\n",
-      "  File \"C:\\Users\\Berry\\AppData\\Local\\Temp\\ipykernel_7188\\225220890.py\", line 22, in bitonic_compare\n",
+      "  File \"C:\\Users\\Berry\\AppData\\Local\\Temp\\ipykernel_9728\\225220890.py\", line 22, in bitonic_compare\n",
       "    if (x[i] > x[i + dist]) == up:\n",
-      "  File \"C:\\Users\\Berry\\Documents\\GitHub\\mympyc\\mpyc\\sectypes.py\", line 63, in __bool__\n",
+      "  File \"C:\\Users\\Berry\\Documents\\GitHub\\mympyc\\mpyc\\sectypes.py\", line 69, in __bool__\n",
       "    raise TypeError('cannot use secure type in Boolean expressions')\n",
       "TypeError: cannot use secure type in Boolean expressions\n"
      ]
@@ -365,13 +365,15 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-03-03 11:49:20,483 Stop MPyC runtime -- elapsed time: 0:00:00.194414\n"
+      "2023-02-25 15:59:52,435 Stop MPyC -- elapsed time: 0:00:00.195|bytes sent: 0\n"
      ]
     }
    ],
@@ -383,7 +385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Python script [sort.py](sort.py) shows how to do secure bitonic sort for lists of arbitrary length, adapted from this general [bitonic sorter](http://www.iti.fh-flensburg.de/lang/algorithmen/sortieren/bitonic/oddn.htm)."
+    "The Python script [sort.py](sort.py) demos MPyC's built-in sorting method, which uses Batcher's merge-exchange sort (yet another sorting network)."
    ]
   }
  ],
