Drop Python 3.8 and Numpy 1.21 support.

--- a/demos/SecretSantaExplained.ipynb
+++ b/demos/SecretSantaExplained.ipynb
@@ -75,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-03-03 11:53:22,523 Start MPyC runtime v0.8.2\n"
+      "2023-04-15 13:03:02,082 Start MPyC runtime v0.9.2\n"
      ]
     }
    ],
@@ -318,12 +318,12 @@
      "text": [
       "Random unit vectors:\n",
       " 1 [1]\n",
-      " 2 [0, 1]\n",
-      " 3 [0, 0, 1]\n",
-      " 4 [0, 1, 0, 0]\n",
-      " 5 [0, 0, 0, 0, 1]\n",
-      " 6 [0, 1, 0, 0, 0, 0]\n",
-      " 7 [0, 0, 0, 0, 0, 0, 1]\n"
+      " 2 [1, 0]\n",
+      " 3 [0, 1, 0]\n",
+      " 4 [0, 0, 1, 0]\n",
+      " 5 [0, 1, 0, 0, 0]\n",
+      " 6 [1, 0, 0, 0, 0, 0]\n",
+      " 7 [0, 0, 0, 0, 1, 0, 0]\n"
      ]
     }
    ],
@@ -347,12 +347,12 @@
      "text": [
       "Random permutations:\n",
       " 1 [0]\n",
-      " 2 [0, 1]\n",
-      " 3 [0, 2, 1]\n",
-      " 4 [3, 2, 0, 1]\n",
-      " 5 [2, 4, 1, 3, 0]\n",
-      " 6 [3, 0, 4, 2, 1, 5]\n",
-      " 7 [0, 5, 1, 6, 2, 3, 4]\n"
+      " 2 [1, 0]\n",
+      " 3 [1, 2, 0]\n",
+      " 4 [3, 0, 2, 1]\n",
+      " 5 [2, 0, 1, 4, 3]\n",
+      " 6 [1, 0, 4, 3, 5, 2]\n",
+      " 7 [6, 0, 4, 3, 5, 1, 2]\n"
      ]
     }
    ],
@@ -376,11 +376,11 @@
      "text": [
       "Random derangements:\n",
       " 2 [1, 0]\n",
-      " 3 [1, 2, 0]\n",
-      " 4 [2, 3, 1, 0]\n",
-      " 5 [3, 2, 1, 4, 0]\n",
-      " 6 [3, 2, 5, 0, 1, 4]\n",
-      " 7 [6, 2, 3, 4, 1, 0, 5]\n"
+      " 3 [2, 0, 1]\n",
+      " 4 [1, 0, 3, 2]\n",
+      " 5 [3, 4, 1, 2, 0]\n",
+      " 6 [3, 4, 1, 5, 2, 0]\n",
+      " 7 [1, 5, 3, 6, 0, 2, 4]\n"
      ]
     }
    ],
@@ -402,7 +402,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-03-03 11:53:22,708 Stop MPyC runtime -- elapsed time: 0:00:00.183619\n"
+      "2023-04-15 13:03:02,230 Stop MPyC -- elapsed time: 0:00:00.148|bytes sent: 0\n"
      ]
     }
    ],
@@ -428,7 +428,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Berry\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3348: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "C:\\Users\\Berry\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3513: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
       "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
@@ -462,32 +462,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-03-03 11:54:26,845 Start MPyC runtime v0.8.2\n",
+      "2023-04-15 13:03:23,698 Start MPyC runtime v0.9.2\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
-      " 2 [1, 0]\n",
+      " 2 [0, 1]\n",
       " 3 [0, 0, 1]\n",
       " 4 [0, 0, 1, 0]\n",
-      " 5 [0, 0, 0, 0, 1]\n",
-      " 6 [0, 1, 0, 0, 0, 0]\n",
-      " 7 [0, 0, 0, 0, 0, 0, 1]\n",
+      " 5 [0, 1, 0, 0, 0]\n",
+      " 6 [1, 0, 0, 0, 0, 0]\n",
+      " 7 [0, 0, 0, 0, 1, 0, 0]\n",
       "Random permutations:\n",
       " 1 [0]\n",
-      " 2 [0, 1]\n",
+      " 2 [1, 0]\n",
       " 3 [0, 2, 1]\n",
-      " 4 [1, 0, 3, 2]\n",
-      " 5 [3, 2, 0, 4, 1]\n",
-      " 6 [2, 1, 0, 4, 5, 3]\n",
-      " 7 [5, 2, 4, 1, 0, 6, 3]\n",
+      " 4 [1, 3, 2, 0]\n",
+      " 5 [4, 1, 3, 2, 0]\n",
+      " 6 [5, 0, 3, 4, 2, 1]\n",
+      " 7 [3, 0, 5, 1, 4, 2, 6]\n",
       "Random derangements:\n",
       " 2 [1, 0]\n",
       " 3 [2, 0, 1]\n",
-      " 4 [1, 3, 0, 2]\n",
-      " 5 [3, 2, 4, 1, 0]\n",
-      " 6 [2, 0, 5, 4, 3, 1]\n",
-      " 7 [3, 0, 6, 4, 5, 1, 2]\n",
-      "2022-03-03 11:54:26,908 Stop MPyC runtime -- elapsed time: 0:00:00.062494\n"
+      " 4 [3, 2, 1, 0]\n",
+      " 5 [3, 4, 0, 1, 2]\n",
+      " 6 [3, 0, 4, 5, 2, 1]\n",
+      " 7 [4, 5, 6, 2, 1, 0, 3]\n",
+      "2023-04-15 13:03:23,737 Stop MPyC -- elapsed time: 0:00:00.039|bytes sent: 0\n"
      ]
     }
    ],
@@ -511,15 +511,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "usage: SecretSantaExplained.py [-H] [-h] [-C ini] [-P addr] [-M m] [-I i]\n",
-      "                               [-T t] [-B b] [--ssl] [-L l] [-K k] [--no-log]\n",
-      "                               [--no-async] [--no-barrier] [--no-gmpy2]\n",
+      "usage: SecretSantaExplained.py [-V] [-H] [-h] [-C ini] [-P addr] [-M m] [-I i]\n",
+      "                               [-T t] [-B b] [--ssl] [-W w] [-L l] [-K k]\n",
+      "                               [--log-level ll] [--no-log] [--no-async]\n",
+      "                               [--no-barrier] [--no-gmpy2] [--no-numpy]\n",
       "                               [--no-prss] [--mix32-64bit] [--output-windows]\n",
       "                               [--output-file] [-f F]\n",
       "\n",
-      "optional arguments:\n",
-      "  -H, --HELP            show this help message for MPyC and exit\n",
-      "  -h, --help            show SecretSantaExplained.py help message (if any)\n",
+      "MPyC help:\n",
+      "  -V, --VERSION         print MPyC version number and exit\n",
+      "  -H, --HELP            print this help message for MPyC and exit\n",
+      "  -h, --help            print help message for this MPyC program (if any)\n",
       "\n",
       "MPyC configuration:\n",
       "  -C ini, --config ini  use ini file, defining all m parties\n",
@@ -529,20 +531,23 @@
       "  -T t, --threshold t   threshold t, 0<=t<m/2\n",
       "  -B b, --base-port b   use port number b+i for party i\n",
       "  --ssl                 enable SSL connections\n",
+      "  -W w, --workers w     maximum number of worker threads per party\n",
       "\n",
       "MPyC parameters:\n",
       "  -L l, --bit-length l  default bit length l for secure numbers\n",
       "  -K k, --sec-param k   security parameter k, leakage probability 2**-k\n",
+      "  --log-level ll        logging level ll=debug/info(default)/warning/error\n",
       "  --no-log              disable logging messages\n",
       "  --no-async            disable asynchronous evaluation\n",
       "  --no-barrier          disable barriers\n",
       "  --no-gmpy2            disable use of gmpy2 package\n",
+      "  --no-numpy            disable use of numpy package\n",
       "  --no-prss             disable use of PRSS (pseudorandom secret sharing)\n",
       "  --mix32-64bit         enable mix of 32-bit and 64-bit platforms\n",
       "\n",
       "MPyC misc:\n",
-      "  --output-windows      screen output for parties i>0 (only on Windows)\n",
-      "  --output-file         append output for parties i>0 to party{m}_{i}.log\n",
+      "  --output-windows      screen output for parties 0<i<m (one window each)\n",
+      "  --output-file         append output of parties 0<i<m to party{m}_{i}.log\n",
       "  -f F                  consume IPython's -f argument F\n"
      ]
     }
@@ -569,33 +574,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-03-03 11:54:32,613 Start MPyC runtime v0.8.2\n",
-      "2022-03-03 11:54:33,255 All 3 parties connected via SSL.\n",
+      "2023-04-15 13:03:24,451 Start MPyC runtime v0.9.2\n",
+      "2023-04-15 13:03:25,077 All 3 parties connected via SSL.\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
-      " 2 [0, 1]\n",
+      " 2 [1, 0]\n",
       " 3 [0, 1, 0]\n",
-      " 4 [0, 0, 1, 0]\n",
-      " 5 [1, 0, 0, 0, 0]\n",
-      " 6 [1, 0, 0, 0, 0, 0]\n",
-      " 7 [0, 0, 0, 1, 0, 0, 0]\n",
+      " 4 [1, 0, 0, 0]\n",
+      " 5 [0, 1, 0, 0, 0]\n",
+      " 6 [0, 0, 1, 0, 0, 0]\n",
+      " 7 [0, 0, 0, 0, 0, 0, 1]\n",
       "Random permutations:\n",
       " 1 [0]\n",
-      " 2 [0, 1]\n",
-      " 3 [2, 0, 1]\n",
-      " 4 [3, 0, 2, 1]\n",
-      " 5 [4, 1, 0, 2, 3]\n",
-      " 6 [1, 2, 0, 4, 3, 5]\n",
-      " 7 [3, 2, 1, 4, 0, 6, 5]\n",
+      " 2 [1, 0]\n",
+      " 3 [0, 2, 1]\n",
+      " 4 [1, 2, 0, 3]\n",
+      " 5 [1, 4, 2, 0, 3]\n",
+      " 6 [3, 0, 4, 5, 2, 1]\n",
+      " 7 [1, 5, 6, 0, 4, 2, 3]\n",
       "Random derangements:\n",
       " 2 [1, 0]\n",
       " 3 [1, 2, 0]\n",
-      " 4 [3, 0, 1, 2]\n",
-      " 5 [1, 3, 4, 2, 0]\n",
-      " 6 [2, 3, 5, 4, 1, 0]\n",
-      " 7 [6, 3, 4, 1, 2, 0, 5]\n",
-      "2022-03-03 11:54:33,549 Stop MPyC runtime -- elapsed time: 0:00:00.936067\n"
+      " 4 [3, 2, 1, 0]\n",
+      " 5 [4, 3, 1, 2, 0]\n",
+      " 6 [2, 0, 1, 4, 5, 3]\n",
+      " 7 [1, 4, 3, 0, 5, 6, 2]\n",
+      "2023-04-15 13:03:25,304 Stop MPyC -- elapsed time: 0:00:00.227|bytes sent: 24834\n"
      ]
     }
    ],
@@ -621,33 +626,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-03-03 11:54:35,796 Start MPyC runtime v0.8.2\n",
-      "2022-03-03 11:54:36,342 All 8 parties connected.\n",
+      "2023-04-15 13:03:25,714 Start MPyC runtime v0.9.2\n",
+      "2023-04-15 13:03:26,243 All 8 parties connected.\n",
       "Example: (5+13)*(5-13) = -144\n",
       "Random unit vectors:\n",
       " 1 [1]\n",
       " 2 [0, 1]\n",
       " 3 [0, 1, 0]\n",
-      " 4 [0, 0, 1, 0]\n",
-      " 5 [1, 0, 0, 0, 0]\n",
-      " 6 [0, 1, 0, 0, 0, 0]\n",
-      " 7 [0, 0, 0, 0, 1, 0, 0]\n",
+      " 4 [1, 0, 0, 0]\n",
+      " 5 [0, 0, 1, 0, 0]\n",
+      " 6 [0, 0, 0, 0, 0, 1]\n",
+      " 7 [1, 0, 0, 0, 0, 0, 0]\n",
       "Random permutations:\n",
       " 1 [0]\n",
       " 2 [1, 0]\n",
-      " 3 [2, 0, 1]\n",
-      " 4 [0, 1, 3, 2]\n",
-      " 5 [4, 1, 3, 2, 0]\n",
-      " 6 [3, 2, 4, 0, 5, 1]\n",
-      " 7 [0, 1, 5, 6, 2, 3, 4]\n",
+      " 3 [1, 0, 2]\n",
+      " 4 [2, 1, 0, 3]\n",
+      " 5 [3, 4, 1, 0, 2]\n",
+      " 6 [5, 4, 3, 2, 1, 0]\n",
+      " 7 [4, 5, 1, 3, 6, 2, 0]\n",
       "Random derangements:\n",
       " 2 [1, 0]\n",
       " 3 [2, 0, 1]\n",
-      " 4 [1, 0, 3, 2]\n",
-      " 5 [1, 0, 4, 2, 3]\n",
-      " 6 [3, 4, 5, 1, 0, 2]\n",
-      " 7 [1, 6, 5, 0, 2, 4, 3]\n",
-      "2022-03-03 11:54:37,299 Stop MPyC runtime -- elapsed time: 0:00:01.503532\n"
+      " 4 [2, 3, 1, 0]\n",
+      " 5 [2, 4, 3, 1, 0]\n",
+      " 6 [5, 4, 3, 2, 1, 0]\n",
+      " 7 [5, 2, 4, 0, 6, 3, 1]\n",
+      "2023-04-15 13:03:26,829 Stop MPyC -- elapsed time: 0:00:00.586|bytes sent: 73192\n"
      ]
     }
    ],
@@ -679,7 +684,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
