Fix disabling PRSS.

--- a/demos/PrefixOrExplained.ipynb
+++ b/demos/PrefixOrExplained.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-10-08 16:31:45,984 Start MPyC runtime v0.10.3\n"
+      "2024-10-21 10:53:07,251 Start MPyC runtime v0.10.3\n"
      ]
     }
    ],
@@ -444,9 +444,10 @@
     }
    ],
    "source": [
+    "no_prss = mpc.options.no_prss\n",
     "mpc.options.no_prss = True  # disable PRSS temporarily\n",
     "complexity(prefix_or1, 32)\n",
-    "mpc.options.no_prss = False  # back to default"
+    "mpc.options.no_prss = no_prss"
    ]
   },
   {
@@ -1004,7 +1005,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-10-08 16:31:47,297 Stop MPyC -- elapsed time: 0:00:01.311|bytes sent: 0\n"
+      "2024-10-21 10:53:09,859 Stop MPyC -- elapsed time: 0:00:02.607|bytes sent: 0\n"
      ]
     }
    ],
