Finalize docs etc. for v0.11.

--- a/demos/4demos.ipynb
+++ b/demos/4demos.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "# use pip (or, conda) to make sure numpy is installed:\n",
-    "!pip -q install numpy  "
+    "!python -m pip -q install numpy  "
    ]
   },
   {
