--- a/demos/KaplanMeierSurvivalExplained.ipynb
+++ b/demos/KaplanMeierSurvivalExplained.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "# use pip (or, conda) to make sure lifelines package is installed:\n",
-    "!pip -q install lifelines  "
+    "!python -m pip -q install lifelines  "
    ]
   },
   {
